--- a/docs/forgot-password.mdx
+++ b/docs/forgot-password.mdx
@@ -21,3 +21,51 @@ To issue a password reset email, you will send a POST request to `/forgot/` with
 Note that a JWT is not needed for this because the user does not need to have any form of authentication.
 
 The auth server will respond with success *if the email was able to be sent without error*. It's important to note here that the endpoint will still return SUCCESS even if the user does not exist in the database. It will only error-out if there was an issue with the email server itself. This is to prevent a brute-force attack on emails that exist in our database. 
+
+
+Workflow 
+
+1. Clicks on /forgot password
+
+2. Makes a post request 
+    * form encoded body with email
+    * doesn't need a jwt, isn't authenticated
+
+3. Goes to the API
+
+4. Redirects to Auth server
+
+5. Seaches for the user in the database, if it exists it generates a pin and current database
+
+6. In the user model sets the date field called "expiration" to that current date + 24 hours
+
+7. Sets the pin to the 7 digit code
+
+8. Using nodemailer it sends an email to the user if the user exists 
+    Subject forgot passord, gives them the pin
+
+9. Always send a 200 sent email, dont wanna reveal is user is not in the database
+
+10. Will catch errors in the node mailer, send back an error only if email is not sent or user doesnt exist 
+
+
+
+1. Need another endpoint to validate an update in password
+    The body of the request should contain pin and new password
+
+
+
+***Security Question? Make it an optional feature before the pin***
+
+* Set a default security question in the database (if the user doesnt exist)
+* Field with every user for specific questions
+* Dev team can choose questions, auth server handles everything. 
+* Config file can turn off this functionality
+
+
+
+1. Rewrite Workflow
+
+2. Give every endpoint at the top with sample
+do shit like kiva #https://github.com/hack4impact-uiuc/kiva-pricing-tool/blob/master/docs/api_docs.mdhttps://github.com/hack4impact-uiuc/kiva-pricing-tool/blob/master/docs/api_docs.md
+
