--- a/docs/Accounts.mdx
+++ b/docs/Accounts.mdx
@@ -31,8 +31,9 @@ above, and sends it to our auth server. The server will make sure that the value
 valid and eligible to make a new user.
 
 
-
 ## 2. Logging in
+The user client would be shown a simple form to input their login information. This i nformation 
+is then passed into our server to confirm that 1. the user exists and 2. the credentials match.
 
 ## 3. Logging out
 
@@ -57,16 +58,3 @@ This endpoint is fired when the "log in" button is clicked in the previous endpo
 
 ## Endpoint: /logout [GET]???
 This endpoint will log the user out of the application, (cookies blah blah blah), and redirect to the home page, where no user credentials are required???
-
-
-# outline
-Here's an outline of what will be described on this page:
-- technologies used
-- endpoints created
-- database models
-- workflow
-- data flow
-- wireframes for the frontend
-- how to use (software dev)
-- how to use (client user)
-- some helpful resources
