--- a/docs/main.mdx
+++ b/docs/main.mdx
@@ -44,3 +44,12 @@ Hopefully won't have to do much else with their API.
 | See Google button and don't want to use | Continue on like you never saw it. |
 | Don't see Google button and want to use | You're fucked. |
 | Don't see Google button and don't want to use | Nothing happens. |
+
+
+## Feedback 
+
+Michael this is beautiful
+
+Questions to answer
+* Do we need to store the email when sending the request to the auth server? 
+* what do the responses look like? 
