--- a/docs/forgot-password.mdx
+++ b/docs/forgot-password.mdx
@@ -22,8 +22,101 @@ Note that a JWT is not needed for this because the user does not need to have an
 
 The auth server will respond with success *if the email was able to be sent without error*. It's important to note here that the endpoint will still return SUCCESS even if the user does not exist in the database. It will only error-out if there was an issue with the email server itself. This is to prevent a brute-force attack on emails that exist in our database. 
 
+## Reset Password
 
-Workflow 
+Get the details of the currently Authenticated User along with basic
+subscription information.
+
+**URL** : `/forgot_password/`
+
+**Method** : `POST`
+
+**Auth required** : NO
+
+**Permissions required** : None
+
+### Request 
+
+The following is an example request to the endpoint:
+
+```json
+{
+    email: test@example.com
+}
+``` 
+
+
+### Response
+
+**Code** : `200 OK` if the response was sent correctly.
+
+**Code** : `500` if there was a server issue (mail server, DB connection, etc.)
+
+**Code** : `400` if there was an issue with the email being invalid.
+
+**Content examples**
+
+If the email could successfully be sent, the API will return:
+
+```json
+{
+    "status": 200,
+    "message": "Sent password reset PIN to user if they exist in the database."
+}
+```
+
+
+## Verify Password Reset
+
+Get the details of the currently Authenticated User along with basic
+subscription information.
+
+**URL** : `/reset_password/`
+
+**Method** : `POST`
+
+**Auth required** : NO
+
+**Permissions required** : None
+
+### Request 
+
+The following is an example request to the endpoint:
+
+```json
+{
+    email: test@example.com,
+    pin: 75834921,
+    password: verysecurepassword
+
+}
+``` 
+
+
+### Response
+
+**Code** : `200 OK` if the user had an updated password.
+
+**Code** : `500` if there was an internal server error and the password could not be updated.
+
+**Code** : `400` if there was an issue with the PIN being expired or a mismatch in email/PIN.
+
+**Content examples**
+
+The API will return the following if the password was successfully reset:
+
+```json
+{
+    "status": 200,
+    "message": "Password successfully reset."
+}
+```
+
+
+
+
+
+# Workflow 
 
 1. Clicks on /forgot password
 
