Added all documentation for the forgot password endpoints

--- a/docs/forgot-password.mdx
+++ b/docs/forgot-password.mdx
@@ -10,24 +10,57 @@ This is a POST request endpoint that allows for email reset of a password for a 
 
 In order to get email set up, please follow the linked instructions.
 
-To issue a password reset email, you will send a POST request to `/forgot/` with the following in the body:
+To issue a password reset email, you will send a POST request to `/forgotPassword/` with the following in the body:
 
 ```json
 {
-    email: test@example.com
+    email: test@example.com,
+    security_answer: abc
 }
 ``` 
 
 Note that a JWT is not needed for this because the user does not need to have any form of authentication.
 
-The auth server will respond with success *if the email was able to be sent without error*. It's important to note here that the endpoint will still return SUCCESS even if the user does not exist in the database. It will only error-out if there was an issue with the email server itself. This is to prevent a brute-force attack on emails that exist in our database. 
+
+
+## Get Security Question
+
+Get the security question stored with user - this is required if the field `securityQuestion` is set to true in the `config.yaml` file. 
+
+**URL** : `/getSecurityQuestion?email=test@example.com`
+
+**Method** : `GET`
+
+**Auth required** : NO
+
+**Permissions required** : None
+
+### Response
+
+**Code** : `200 OK` if the user could be successfully found.
+
+**Code** : `500` if there was an internal server error and the security question couldn't be retrieved, or the `securityQuestion` is not configured. 
+
+**Code** : `400` if the email requested did not exist in the database. 
+
+**Content examples**
+
+The API will return the following if the password was successfully reset:
+
+```json
+{
+    "status": 200,
+    "question": "What street did you grow up on?"
+}
+```
+
 
 ## Reset Password
 
 Get the details of the currently Authenticated User along with basic
 subscription information.
 
-**URL** : `/forgot_password/`
+**URL** : `/forgotPassword`
 
 **Method** : `POST`
 
@@ -41,14 +74,16 @@ The following is an example request to the endpoint:
 
 ```json
 {
-    email: test@example.com
+    email: test@example.com,
+    answer: main street
 }
 ``` 
 
+Where `answer` is the answer to the security question previously fetched with `getSecurityQuestion`.
 
 ### Response
 
-**Code** : `200 OK` if the response was sent correctly.
+**Code** : `200 OK` if all the fields match up and the password reset token could be issued successfully.
 
 **Code** : `500` if there was a server issue (mail server, DB connection, etc.)
 
@@ -71,7 +106,7 @@ If the email could successfully be sent, the API will return:
 Get the details of the currently Authenticated User along with basic
 subscription information.
 
-**URL** : `/reset_password/`
+**URL** : `/resetPassword`
 
 **Method** : `POST`
 
@@ -108,45 +143,43 @@ The API will return the following if the password was successfully reset:
 ```json
 {
     "status": 200,
-    "message": "Password successfully reset."
+    "message": "Password successfully reset.",
+    "jwt": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxM"
 }
 ```
 
 
-
-
-
 # Workflow 
 
-1. Clicks on /forgot password
+1. User navigates to some "forgot password" link on the frontend.
 
-2. Makes a post request 
-    * form encoded body with email
-    * doesn't need a jwt, isn't authenticated
+2. User enters email in the provided field.
 
-3. Goes to the API
+3. Client makes a GET request to `/getSecurityQuestion?email=test@example.com`, and, if user exists, gets a securtiy question back.
 
-4. Redirects to Auth server
+4. User enters security question answer. 
 
-5. Seaches for the user in the database, if it exists it generates a pin and current database
-
-6. In the user model sets the date field called "expiration" to that current date + 24 hours
-
-7. Sets the pin to the 7 digit code
-
-8. Using nodemailer it sends an email to the user if the user exists 
-    Subject forgot passord, gives them the pin
-
-9. Always send a 200 sent email, dont wanna reveal is user is not in the database
-
-10. Will catch errors in the node mailer, send back an error only if email is not sent or user doesnt exist 
+5. Makes a post request to the API which goes to the auth server 
+    * form encoded body with email and security question answer
+    * doesn't need a JWT, isn't authenticated
 
 
+6. Seaches for the user in the database, if it exists and the security question matches, it generates a pin and current database
 
-1. Need another endpoint to validate an update in password
-    The body of the request should contain pin and new password
+7. In the user model sets the date field called "expiration" to that current date + 24 hours.
 
+8. Sets the pin to the 7 digit code.
 
+9. Using Nodemailer, it sends an email to the user if the user exists.
+
+9. Will return a response based on whether the email was successfully sent to the user.
+
+10. User enters PIN in a field in the client to reset password.
+
+11. Client sends request to `/resetPassword` with the updated password, email, and PIN.
+
+12. If all is successful, expiration is invalidated and password is changed. If not (email doesn't match, PIN is expired, etc.) then an error message will be returned to the client.
+User gets logged in with the returned JWT.
 
 ***Security Question? Make it an optional feature before the pin***
 
@@ -154,11 +187,3 @@ The API will return the following if the password was successfully reset:
 * Field with every user for specific questions
 * Dev team can choose questions, auth server handles everything. 
 * Config file can turn off this functionality
-
-
-
-1. Rewrite Workflow
-
-2. Give every endpoint at the top with sample
-do shit like kiva #https://github.com/hack4impact-uiuc/kiva-pricing-tool/blob/master/docs/api_docs.mdhttps://github.com/hack4impact-uiuc/kiva-pricing-tool/blob/master/docs/api_docs.md
-
