--- a/docs/features/forgot-password.mdx
+++ b/docs/features/forgot-password.mdx
@@ -181,9 +181,9 @@ The API will return the following if the password was successfully reset:
 12. If all is successful, expiration is invalidated and password is changed. If not (email doesn't match, PIN is expired, etc.) then an error message will be returned to the client.
 User gets logged in with the returned JWT.
 
-***Security Question? Make it an optional feature before the pin***
+***Not sure whether you want to use Security Questions? Make it an optional feature before the pin***
 
 * Set a default security question in the database (if the user doesnt exist)
 * Field with every user for specific questions
-* Dev team can choose questions, auth server handles everything. 
+* The dev team can choose questions, auth server handles everything. 
 * Config file can turn off this functionality
