--- a/docs/user_permissions.mdx
+++ b/docs/user_permissions.mdx
@@ -15,12 +15,12 @@ import Arrow from './arrow'
     <Container orientation="column">
         <Arrow scale=".5">
             <div>
-                jwt_token
+                jwt
             </div>
         </Arrow>
         <Arrow inverseArrow={true} scale=".5">
             <div>
-                {'{...data}'}
+                {'{...data} and jwt'}
             </div>
         </Arrow>
     </Container>
@@ -28,12 +28,12 @@ import Arrow from './arrow'
     <Container orientation="column">
         <Arrow scale=".5">
             <div>
-                jwt_token
+                jwt
             </div>
         </Arrow>
         <Arrow inverseArrow={true} scale=".5">
             <div>
-                {'{userLevel, userID, ...}'}
+                {'{userLevel, ...} and jwt'}
             </div>
         </Arrow>
     </Container>
@@ -46,7 +46,7 @@ All users with the same title have the same permissions and vice-versa.
 
 The auth server maintains the userIDs and role/title associated with each user.
 
-The jwt_token carries information of the userID and role/title, and the front-end exchanges this token with the API in the back-end in exhcange for resources.
+The JSON Web Token(JWT) will encode the userID. and the front-end exchanges this token with the API in the back-end in exhcange for resources.
 
 The back-end devs dictate how the data is limited by roles (ex. general users are not given write access to certain resources, etc).
 
