--- a/docs/main.mdx
+++ b/docs/main.mdx
@@ -12,3 +12,11 @@ To do this we want to build an independent server for authentcation that is auto
 
 
 
+# Features
+
+1. Registering and Login that email's you to verify your account
+2. Forgot Password Pages that use either a pin or security question, and then allows you to reset your password
+3. Can define a config file that defines the different user levels, and allow certain users to promote others to a higher user levels
+4. Can use google authentication
+
+
